# libclipboard

./: Cargo.toml  README.md  copy_lib.ps1  copy_lib.sh  make_symlink.ps1  make_symlink.sh
.github/workflows/: libclipboard.yml  rust.yml
src/: lib.rs
